--- a/user-feign/pom.xml
+++ b/user-feign/pom.xml
@@ -18,12 +18,12 @@
 
 
     <dependencies>
-        <dependency>
+     <!--   <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
-        </dependency>
+        </dependency>-->
 
-        <!--   <dependency>
+      <!--     <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-webflux</artifactId>
            </dependency>-->
