--- a/spring-cloud-gateway/src/main/resources/application.yml
+++ b/spring-cloud-gateway/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
 spring:
   application:
     name: spring-cloud-gateway-feign
+  config:
+    import: optional:nacos:${spring.application.name}.${spring.cloud.nacos.config.file-extension}
   cloud:
     nacos:
       discovery:
